# clibs

./: CMakeLists.txt  README.md
include/: allocator.h  common.h  fixedheapallocator.h  stackallocator.h  staticallocator.h  vector.h
src/: main.c
tests/: main_test.c
